--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,15 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
 body {
-    font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica' sans-serif;
+    font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', sans-serif;
     font-size: 18px; 
 }
 
 #map {
     height: 600px;
+}
+
+.gm-style-iw {
+    width: 150px;
+    height: 150px;
 }
